--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,3 +1,14 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer base {
+  body,
+  #root {
+    @apply bg-neutral-900;
+  }
+}
+
+:root {
+  color-scheme: dark;
+}
